Migrations dos modelos e criação do Db

--- a/FidelPoints/appsettings.json
+++ b/FidelPoints/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnections": "Server=(localdb)\\mssqllocaldb;Database=firstFuel;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnections": "Server=(localdb)\\mssqllocaldb;Database=fidelPoints;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
